# Melkam

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  TegenConfig.json  files.txt
docs/: sideScroll.cpp  thirdPersonController.cpp  topDown.cpp  uiShowcase.cpp
include/Melkam/core/: Application.hpp  Engine.hpp  Logger.hpp
include/Melkam/math/: Math.hpp  Matrix.hpp  Quaternion.hpp  Vector.hpp
include/Melkam/physics/: Collider.hpp
include/Melkam/platform/: Input.hpp  Window.hpp
include/Melkam/scene/: Components.hpp  Entity.hpp  Entity.inl  Scene.hpp  System.hpp  Systems2D.hpp
include/Melkam/ui/: Ui.hpp
include/raylib/: raygui.h
src/: main.cpp
src/Melkam/core/: Application.cpp  Engine.cpp  Logger.cpp
src/Melkam/physics/: Collider.cpp
src/Melkam/platform/: Input.cpp  Window.cpp
src/Melkam/scene/: Entity.cpp  Scene.cpp  Systems2D.cpp
src/Melkam/ui/: Ui.cpp
